test/modules/diten/usemodule/check_symbol_accesses2.good
check_symbol_accesses2.chpl:21: In function 'bar':
check_symbol_accesses2.chpl:22: error: 'a' undeclared (first use this function)
